<resources>
    <string name="app_name">Chattan</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="gmail">Gmail...</string>
    <string name="password">Password...</string>
    <string name="username">Username...</string>
    <string name="silahkan_pilih_avatar_kamu">Silahkan pilih Avatar kamu</string>
    <string name="simpan">Simpan</string>
    <string name="explore">Explore</string>
    <string name="friend">Friends</string>
    <string name="search">Username...\n</string>

    <string-array name="avatar">
        <item>@drawable/avatar1</item>
        <item>@drawable/avatar2</item>
        <item>@drawable/avatar3</item>
        <item>@drawable/avatar4</item>
        <item>@drawable/avatar5</item>
        <item>@drawable/avatar6</item>
        <item>@drawable/avatar7</item>
        <item>@drawable/avatar8</item>
        <item>@drawable/avatar9</item>
    </string-array>
</resources>