<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_tab"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp">
        
        <Button
            android:id="@+id/btnTabLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/login"
            android:drawableStart="@drawable/ic_login"
            android:backgroundTint="@color/biru"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnTabRegister"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/register"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_register"
            android:backgroundTint="@color/ungu"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/bg_input"
            android:hint="@string/username"
            android:padding="14dp"
            android:textColor="@color/black"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/bg_input"
            android:hint="@string/gmail"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/ungu"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>