<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:padding="16dp"
    tools:context=".FriendActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@drawable/bg_tab"
        android:padding="8dp"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/btnTapExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/explore"
            android:textStyle="bold"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_explore"
            android:backgroundTint="@color/biru"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/btnTapFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/friend"
            android:textStyle="bold"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_friend"
            android:backgroundTint="@android:color/transparent"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="12dp"
        android:paddingTop="18dp"
        android:background="@drawable/bg_input">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_search"
            android:layout_marginEnd="12dp"/>
        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:textColor="@color/black"
            android:background="android:color/transparent"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>